# sentiflow-cloud-demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  test_assistant_complet.py  test_bts.py  test_new_features.py  train_pipeline.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  kafka_consumer.py  kafka_producer.py  main.py  tasks.py
backend/app/ml/: sentiflow_tiny_llm.tokenizer.json
backend/app/models/: __init__.py  account.py  (+14 more)
data/: planner_training_templates.json  rag_eval_dataset.csv
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: architecture_cloud_aws.md  architecture_technique.md  diagrammes_uml.md  pipeline_donnees.md  technologies_utilisees.md
features/: __init__.py  preprocessing.py
features/pipelines/: __init__.py  train_sentiment.py
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend-streamlit/: Dockerfile  app.py  start.sh
frontend-streamlit/components/: __init__.py  api.py
frontend-streamlit/pages/: 1_Login.py  2_Dashboard.py  3_Cibles.py  4_Alertes.py  5_Admin.py
frontend/src/: App.css  App.js  index.js
scripts/: auto_retrain_pipeline.py  evaluate_model.py  finetune_colab.ipynb  fix_conflicts.py  generate_training_data.py  run_prod_eval.sh  test_model.py  test_rag_from_scratch.py  test_rag_mcp_live.py  test_rag_score.py  train_sentiflow_llm.py  train_tinygpt_colab.py  train_tinygpt_colab_cell.py
services/: __init__.py
services/drl/: __init__.py
services/llm/: __init__.py
services/sentiment/: __init__.py  model.py
(+73 files in other folders)
