[project]
name = "sentiflow"
version = "1.0.0"
description = "Plateforme d'analyse de sentiments Twitter avec LLM et DRL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "kafka-python>=2.0.2",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # Frontend
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    # ML
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "accelerate>=0.26.1",
    "datasets>=2.16.0",
    "scikit-learn>=1.4.0",
    "stable-baselines3>=2.2.1",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.4",
    "mlflow>=2.12.0",
    # Utils
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "slow: tests nécessitant le chargement du modèle ML (~30s)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
